# dataset_collector

./: CMakeLists.txt  base.launch  package.xml
config/: rec_model.yaml
include/: respawn_rec_model.h  respawn_robot.h
launch/: controller_rec_model.launch  dataset_collector.launch  dataset_collector_rec_model.launch  dataset_merge.launch  gazebo_rec_model.launch  get_global_map.launch  get_map_bag.launch  get_map_png.launch  robot_spawn.launch
models/old/: aidin8_model.sdf  aidin8_model_demo.sdf  aidin8_model_down.sdf  aidin8_model_down_backup.sdf  aidin8_model_down_v2.sdf  example.sdf  model.config
models/terrain_1/: model.config  model.sdf
models/terrain_2/: model.config  model.sdf
models/terrain_3/: model.config  model.sdf
models/terrain_3/media/: terrain_3.dae
models/terrain_4/: model.config  model.sdf
models/terrain_4/media/: terrain_1.dae  terrain_4.dae
models/terrain_5/: model.config  model.sdf
models/terrain_6/: model.config  model.sdf
msg/: dataset.msg  dataset_rec_model.msg
rviz/: config.rviz
scripts/: dataset_checker.py  dataset_merge.py  image_pixel_changer.py  image_size_changer.py
src/: ADN_FH_nullfix.py  FH_11x8+5x8.h5  FH_ROS (copy).py  FH_ROS singledone.py  FH_ROS.py  FH_ROSbackup9_6_15.py  FH_ROSblue.py  FH_ROSchunganbackup.py  FH_ROSori.py  FH_ROSsilpae.py  FH_ROStensorflow.py  Funcs.py  dataset (copy).cpp  dataset.cpp  dataset1215.cpp  dataset_checker.cpp  dataset_collector.cpp  dataset_collector_rec_model.cpp  datasetimagemake11_09.cpp  get_global_map.cpp  good.cpp  good.h  imsi.pth  output.txt  rec_model_plugin.cpp  respawn_rec_model.cpp  respawn_rec_model_base.cpp  respawn_robot.cpp  saved_model.pb
src/LegoNet_V7_FP16/: saved_model.pb
src/LegoNet_V7_FP16/variables/: variables.data-00000-of-00001  variables.index
src/h5txt/: dset.asci  h5_txt.py  np_array.h5  np_array.txt  np_array1.txt
src/legoNet_v7/: saved_model.pb
src/legoNet_v7/variables/: variables.data-00000-of-00001  variables.index
urdf/: rectangular_model.urdf
worlds/: base.world  terrain_1.world  terrain_2.world  terrain_3.world  terrain_3_multi.world  terrain_4.world  terrain_5world  terrain_6.world
worlds/old/: aidin8.world  aidinvi_8.world  aidinvi_8_backup.world  aidinviii.world  dataset.world
