<package format="2">
    <name>dataset_collector</name>
    <description>datasetpackage</description>
    <maintainer email="gobbipenguin@todo.todo">gobbipenguin</maintainer>
    <license>Apache 2.0</license>
    <version>1.6.4</version>
    <buildtool_depend>catkin</buildtool_depend>

    <depend>roslib</depend>

    <depend>geometry_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>aidin_msgs</depend>
    <depend>grid_map_core</depend>
    <depend>grid_map_ros</depend>
    <depend>grid_map_msgs</depend>
    <depend>grid_map_cv</depend>
    <depend>grid_map_filters</depend>
    <depend>grid_map_loader</depend>
    <depend>grid_map_octomap</depend>
    <depend>grid_map_rviz_plugin</depend>
    <depend>grid_map_visualization</depend>
    <depend>cv_bridge</depend>
    <depend>eigen</depend>
    <depend>eigen_conversions</depend>
    
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>rospy</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>rospy</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>rospy</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>message_runtime</exec_depend>

    <exec_depend>gazebo_plugins</exec_depend>
    <exec_depend>gazebo_ros_control</exec_depend>
    
</package>
